--- a/web-app/client/index_old.html
+++ b/web-app/client/index_old.html
@@ -283,8 +283,8 @@
         </ul>
       </div>
     </div>
-    <div class="info-box sparkline-box app-processed">{{view C.Embed.Chart metrics="/reactor/apps/{id}/process.events.processed" title="Processed"}}</div>
-    <div class="info-box sparkline-box app-busyness">{{view C.Embed.Chart metrics="/reactor/apps/{id}/process.busyness" unit="percent" title="Busyness"}}</div>
+    <div class="info-box sparkline-box app-processed">{{view C.Embed.Chart metrics="/system/apps/{id}/process.events.processed" title="Processed"}}</div>
+    <div class="info-box sparkline-box app-busyness">{{view C.Embed.Chart metrics="/system/apps/{id}/process.busyness" unit="percent" title="Busyness"}}</div>
     <div class="info-box app-storage" style="padding: 0;text-align: center;">
       <div class="sparkline-box-title">Storage</div>
       <div class="sparkline-box-value" style="padding-left: 0;padding-top: 19px;width: 80px;">{{model.storageLabel}}<br /><span>{{model.storageUnits}}</span></div>
@@ -350,7 +350,7 @@
     <h1>{{model.name}} <span>Stream</span></h1>
   </div>
   <div id="info">
-    <div class="info-box sparkline-box">{{view C.Embed.Chart title="Arrival Rate" metrics="/reactor/streams/{id}/collect.events"}}</div>
+    <div class="info-box sparkline-box">{{view C.Embed.Chart title="Arrival Rate" metrics="/system/streams/{id}/collect.events"}}</div>
     <div class="info-box" style="padding: 0;text-align: center;">
       <div class="sparkline-box-title">Storage</div>
       <div class="sparkline-box-value" style="padding-left: 0;padding-top:19px;width: 80px;">{{model.storageLabel}}<br /><span>{{model.storageUnits}}</span></div>
@@ -530,8 +530,8 @@
       <div class="flow-state"><strong>{{model.currentState}}</strong></div>
     </div>
 
-    <div class="info-box sparkline-box">{{view C.Embed.Chart metrics="/reactor/apps/{parent}/mapreduce/{id}/mappers/process.completion" title="Mapping" unit="percent"}}</div>
-    <div class="info-box sparkline-box">{{view C.Embed.Chart metrics="/reactor/apps/{parent}/mapreduce/{id}/reducers/process.completion" title="Reducing" unit="percent"}}</div>
+    <div class="info-box sparkline-box">{{view C.Embed.Chart metrics="/system/apps/{parent}/mapreduce/{id}/mappers/process.completion" title="Mapping" unit="percent"}}</div>
+    <div class="info-box sparkline-box">{{view C.Embed.Chart metrics="/system/apps/{parent}/mapreduce/{id}/reducers/process.completion" title="Reducing" unit="percent"}}</div>
 
   </div>
   <div id="panels">
@@ -650,8 +650,8 @@
       <div class="flow-state"><strong>{{model.currentState}}</strong></div>
     </div>
 
-    <div class="info-box sparkline-box app-processed">{{view C.Embed.Chart metrics="/reactor/apps/{parent}/flows/{id}/process.events.processed" title="Processing Rate"}}</div>
-    <div class="info-box sparkline-box app-busyness">{{view C.Embed.Chart metrics="/reactor/apps/{parent}/flows/{id}/process.busyness" title="Busyness" unit="percent"}}</div>
+    <div class="info-box sparkline-box app-processed">{{view C.Embed.Chart metrics="/system/apps/{parent}/flows/{id}/process.events.processed" title="Processing Rate"}}</div>
+    <div class="info-box sparkline-box app-busyness">{{view C.Embed.Chart metrics="/system/apps/{parent}/flows/{id}/process.busyness" title="Busyness" unit="percent"}}</div>
 
   </div>
 
@@ -731,7 +731,7 @@
                             {{id}}
                           </td>
                           <td class="flowlet-blue">
-                            {{view C.Embed.Chart grid="true" entityType="Queue" title="Inbound Events per Second" width="305" entityIdBinding=id metrics="/reactor/apps/{app}/flows/{flow}/flowlets/{flowlet}/process.events.in" classNames="sparkline-flowlet-box"}}
+                            {{view C.Embed.Chart grid="true" entityType="Queue" title="Inbound Events per Second" width="305" entityIdBinding=id metrics="/system/apps/{app}/flows/{flow}/flowlets/{flowlet}/process.events.in" classNames="sparkline-flowlet-box"}}
                           </td>
                         </tr>
                       {{/each}}
@@ -752,18 +752,18 @@
             <table style="width: 100%">
               <tr>
                 <td class="flowlet-blue">
-                  {{view C.Embed.Chart grid="true" width="305" metrics="/reactor/apps/{app}/flows/{flow}/flowlets/{id}/process.events.processed" classNames="sparkline-flowlet-box" title="Processing Rate"}}
+                  {{view C.Embed.Chart grid="true" width="305" metrics="/system/apps/{app}/flows/{flow}/flowlets/{id}/process.events.processed" classNames="sparkline-flowlet-box" title="Processing Rate"}}
                 </td>
                 <td class="flowlet-blue">
-                  {{view C.Embed.Chart grid="true" width="305" metrics="/reactor/apps/{app}/flows/{flow}/flowlets/{id}/store.ops" classNames="sparkline-flowlet-box" title="Data Operations"}}
+                  {{view C.Embed.Chart grid="true" width="305" metrics="/system/apps/{app}/flows/{flow}/flowlets/{id}/store.ops" classNames="sparkline-flowlet-box" title="Data Operations"}}
                 </td>
               </tr>
               <tr>
                 <td class="flowlet-blue">
-                  {{view C.Embed.Chart grid="true" width="305" unit="percent" metrics="/reactor/apps/{app}/flows/{flow}/flowlets/{id}/process.busyness" classNames="sparkline-flowlet-box" title="Busyness"}}
+                  {{view C.Embed.Chart grid="true" width="305" unit="percent" metrics="/system/apps/{app}/flows/{flow}/flowlets/{id}/process.busyness" classNames="sparkline-flowlet-box" title="Busyness"}}
                 </td>
                 <td class="flowlet-blue">
-                  {{view C.Embed.Chart grid="true" width="305" metrics="/reactor/apps/{app}/flows/{flow}/flowlets/{id}/process.errors" classNames="sparkline-flowlet-box" title="Errors"}}
+                  {{view C.Embed.Chart grid="true" width="305" metrics="/system/apps/{app}/flows/{flow}/flowlets/{id}/process.errors" classNames="sparkline-flowlet-box" title="Errors"}}
                 </td>
               </tr>
             </table>
@@ -780,7 +780,7 @@
                       {{#each model.outputs}}
                         <tr>
                           <td class="flowlet-blue">
-                            {{view C.Embed.Chart grid="true" entityType="Queue" title="Outbound Events per Second" width="305" entityIdBinding=id metrics="/reactor/apps/{app}/flows/{flow}/flowlets/{flowlet}/process.events.out" classNames="sparkline-flowlet-box"}}
+                            {{view C.Embed.Chart grid="true" entityType="Queue" title="Outbound Events per Second" width="305" entityIdBinding=id metrics="/system/apps/{app}/flows/{flow}/flowlets/{flowlet}/process.events.out" classNames="sparkline-flowlet-box"}}
                           </td>
                           <td class="flowlet-popup-input">
                             {{id}}
@@ -833,7 +833,7 @@
             <td class="app-list-count" {{bindAttr title="model.storageRaw"}}>{{model.storageLabel}}<br /><span>{{model.storageUnits}}</span></td>
             <td class="app-list-count" {{bindAttr title="model.eventsRaw"}}>{{model.eventsLabel}}{{model.eventsUnits}}<br /><span>Events</span></td>
             <td style="padding-right: 0;max-width:295px;">
-              {{view C.Embed.Chart entityType="Stream" width="376" mode="singular" metrics="/reactor/streams/{id}/collect.events"}}
+              {{view C.Embed.Chart entityType="Stream" width="376" mode="singular" metrics="/system/streams/{id}/collect.events"}}
             </td>
           </tr>
           </tbody>
@@ -903,9 +903,9 @@
     <h1>{{model.name}} <span>Dataset</span></h1>
   </div>
   <div id="info">
-    <div class="info-box sparkline-box write-rate">{{view C.Embed.Chart title="Write Rate (Bytes)" metrics="/reactor/datasets/{id}/dataset.store.bytes" unit="bytes"}}</div>
-    <div class="info-box sparkline-box write-rate">{{view C.Embed.Chart title="Write Rate (Ops)" metrics="/reactor/datasets/{id}/dataset.store.writes" unit="OPS/S"}}</div>
-    <div class="info-box sparkline-box read-rate">{{view C.Embed.Chart title="Read Rate (Ops)" metrics="/reactor/datasets/{id}/dataset.store.reads" unit="OPS/S"}}</div>
+    <div class="info-box sparkline-box write-rate">{{view C.Embed.Chart title="Write Rate (Bytes)" metrics="/system/datasets/{id}/dataset.store.bytes" unit="bytes"}}</div>
+    <div class="info-box sparkline-box write-rate">{{view C.Embed.Chart title="Write Rate (Ops)" metrics="/system/datasets/{id}/dataset.store.writes" unit="OPS/S"}}</div>
+    <div class="info-box sparkline-box read-rate">{{view C.Embed.Chart title="Read Rate (Ops)" metrics="/system/datasets/{id}/dataset.store.reads" unit="OPS/S"}}</div>
 
     <div class="info-box app-storage" style="padding: 0;text-align: center;">
       <div class="sparkline-box-title">Stored</div>
@@ -949,8 +949,8 @@
       <div class="flow-state"><strong>{{model.currentState}}</strong></div>
     </div>
 
-    <div class="info-box sparkline-box">{{view C.Embed.Chart title="Successful Requests" metrics="/reactor/apps/{parent}/procedures/{id}/query.requests"}}</div>
-    <div class="info-box sparkline-box">{{view C.Embed.Chart title="Failed Requests" metrics="/reactor/apps/{parent}/procedures/{id}/query.failures"}}</div>
+    <div class="info-box sparkline-box">{{view C.Embed.Chart title="Successful Requests" metrics="/system/apps/{parent}/procedures/{id}/query.requests"}}</div>
+    <div class="info-box sparkline-box">{{view C.Embed.Chart title="Failed Requests" metrics="/system/apps/{parent}/procedures/{id}/query.failures"}}</div>
   </div>
   <div id="panels">
 
@@ -1246,7 +1246,7 @@
           <td class="app-list-count">{{counts.Flow}}</strong></td>
           <td class="app-list-count">{{counts.Dataset}}</strong></td>
           <td class="app-list-count">{{counts.Procedure}}</strong></td>
-          <td style="max-width:264px;">{{view C.Embed.Chart entityIdBinding=id entityType="App" height="50" metrics="/reactor/apps/{id}/process.busyness" unit="percent"}}</td>
+          <td style="max-width:264px;">{{view C.Embed.Chart entityIdBinding=id entityType="App" height="50" metrics="/system/apps/{id}/process.busyness" unit="percent"}}</td>
         </tr>
       {{/each}}
       </tbody>
@@ -1292,7 +1292,7 @@
           </td>
           <td class="app-list-count">{{storageLabel}}<br /><span>{{storageUnits}}</span></td>
           <td class="app-list-count">{{eventsLabel}}{{eventsUnits}}<br /><span>Events</span></td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Stream" mode="singular" metrics="/reactor/streams/{id}/collect.events"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Stream" mode="singular" metrics="/system/streams/{id}/collect.events"}}</td>
         </tr>
       {{/each}}
       </tbody>
@@ -1322,8 +1322,8 @@
           <td class="app-list-name">
             <a {{bindAttr href="href"}}>{{name}}</a><br /><span class="app-list-status app-status">{{currentState}}</span>
           </td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Flow" metrics="/reactor/apps/{parent}/flows/{id}/process.events.processed"}}</td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Flow" metrics="/reactor/apps/{parent}/flows/{id}/process.busyness" unit="percent"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Flow" metrics="/system/apps/{parent}/flows/{id}/process.events.processed"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Flow" metrics="/system/apps/{parent}/flows/{id}/process.busyness" unit="percent"}}</td>
         </tr>
       {{/each}}
       </tbody>
@@ -1349,8 +1349,8 @@
           <td class="app-list-name">
             <a {{bindAttr href="href"}}>{{name}}</a><br /><span class="app-list-status app-status">{{currentState}}</span>
           </td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Mapreduce" metrics="/reactor/apps/{parent}/mapreduce/{id}/mappers/process.completion" unit="percent"}}</td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Mapreduce" metrics="/reactor/apps/{parent}/mapreduce/{id}/reducers/process.completion" unit="percent"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Mapreduce" metrics="/system/apps/{parent}/mapreduce/{id}/mappers/process.completion" unit="percent"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Mapreduce" metrics="/system/apps/{parent}/mapreduce/{id}/reducers/process.completion" unit="percent"}}</td>
         </tr>
       {{/each}}
       </tbody>
@@ -1389,7 +1389,7 @@
             <a {{bindAttr href="href"}}>{{name}}</a><br /><span class="app-list-status">{{classname}}</span>
           </td>
           <td class="app-list-count">{{storageLabel}}<br /><span>{{storageUnits}}</span></td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Dataset" mode="singular" metrics="/reactor/datasets/{id}/dataset.store.bytes"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Dataset" mode="singular" metrics="/system/datasets/{id}/dataset.store.bytes"}}</td>
         </tr>
       {{/each}}
       </tbody>
@@ -1418,8 +1418,8 @@
           <td class="app-list-name">
             <a {{bindAttr href="href"}}>{{name}}</a><br /><span class="app-list-status app-status">{{currentState}}</span>
           </td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Procedure" metrics="/reactor/apps/{parent}/procedures/{id}/query.requests"}}</td>
-          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Procedure" metrics="/reactor/apps/{parent}/procedures/{id}/query.failures"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Procedure" metrics="/system/apps/{parent}/procedures/{id}/query.requests"}}</td>
+          <td style="max-width:262px;">{{view C.Embed.Chart entityIdBinding=id entityType="Procedure" metrics="/system/apps/{parent}/procedures/{id}/query.failures"}}</td>
         </tr>
       {{/each}}
       </tbody>
